k8s/hexitalk/templates/ingress/client-gateway-ms.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-gateway-ms-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-gateway-ms
                port:
                  number: 3000
