k8s/hexitalk/templates/ingress/socket-ms.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket-ms-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: socket-ms
                port:
                  number: 3100
