k8s/hexitalk/templates/ingress/web-client.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-client-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-client
                port:
                  number: 80
